--- a/doc.html
+++ b/doc.html
@@ -6,6 +6,7 @@
         <style>
           body{
             font-family: sans-serif;
+background-color: #ffc;
           }
         </style>
     </head>
