--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
         <title>TypeScript Testing</title>
         <style>
           body {
@@ -10,10 +10,10 @@
         </style>
     </head>
     <body>
-      <p id="1"></p>
-      <p id="2"></p>
-      <p id="3"></p>
-      <p id="4"></p>
-      <script src="main.ts"></script>
+      <p id="uno"></p>
+      <p id="dos"></p>
+      <p id="tres"></p>
+      <p id="cuatro"></p>
+      <script src="script/main.ts"></script>
     </body>
 </html>
